--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://harshitpurwar.com/"
 languageCode = "en-us"
 title = "Harshit Purwar: UX Engineer, Design System, CSS, HTML5, JS"
 theme = "hp"
@@ -17,11 +17,7 @@ disqusShortname = "harshitpurwar"
   filename = "sitemap.xml"
 
 [params]
-  description = "The last theme you'll ever need. Maybe."
+  description = "UX"
   facebook = ""
-  twitter = "https://twitter.com/GoHugoIO"
+  twitter = "https://twitter.com/harshitpurwar"
   instagram = ""
-  youtube = ""
-  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-black"
-  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
