Updating base url to https

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://harshitpurwar.com/"
+baseURL = "https://harshitpurwar.com/"
 relativeURLs = true
 languageCode = "en-us"
 title = "Harshit Purwar: UX Engineer, Design System, CSS, HTML5, JS"
